# learn-kafka

./: .gitignore  README.md  consumer-offset-seek.py  consumer.py  docker-compose-3-kafka.yaml  docker-compose-single.yaml  producer.py  pyproject.toml  stats.py
go-producer/: go.mod  main.go
